--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/eduzeu/mapmates#readme",
   "dependencies": {
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "mongodb": "^6.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
